Experimental fix for second Owl issue on IE8

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -341,7 +341,6 @@ main h1, main h2, .sidebar h2 {
 
 .car-carousel .owl-item div img {
     position: relative;
-    max-width: 100%;
 }
 
 .car-carousel img {
